fix: partnership container initial overflow

--- a/assets/scss/layouts-responsive/_partnership.scss
+++ b/assets/scss/layouts-responsive/_partnership.scss
@@ -1,4 +1,5 @@
 .partnership-container {
+  height: auto;
   .partnership-content {
     display: flex;
     flex-direction: column;
